-
Bug
-
Resolution: Fixed
-
P2
-
21, 22
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311379 | 21.0.1 | Axel Boldt-Christmas | P2 | Resolved | Fixed | b02 |
| JDK-8311292 | 21 | Axel Boldt-Christmas | P2 | Resolved | Fixed | b30 |
The assertion was hit once while testing compiler/loopstripmining/TestNoWarningLoopStripMiningIterSet.java#ZGenerational on PPC64le. (May or may not be platform specific.)
Heap initialization failed. See attached hs_err file.
Heap initialization failed. See attached hs_err file.
- backported by
-
JDK-8311292 assert(reserved_rgn != nullptr) failed: Add committed region, No reserved region found
-
- Resolved
-
-
JDK-8311379 assert(reserved_rgn != nullptr) failed: Add committed region, No reserved region found
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21/c9111d57
-
Commit
openjdk/jdk/f393975d
-
Review
openjdk/jdk21/92
-
Review
openjdk/jdk/14730
(1 links to)