8310743: assert(reserved_rgn != nullptr) failed: Add committed region, No reserved region found

Reviewed-by: ayang
Backport-of: f393975d1b9423835a7aa42f6ffc0656499701d7